[tool.poetry]
name = "airbnb"
version = "0.1.0"
description = ""
authors = ["soyeonnnb <la28s5d@naver.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.2"
pillow = "^9.2.0"
djangorestframework = "^3.14.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
